added in some todos for full partial postcode checks